# phoenix

./: .example_aws.dev.env  .gitignore  .gitlab-ci.yml  .tool-versions  CONTRIBUTING.md  Makefile  README.md  Tiltfile  Tiltfile.dev  Tiltfile.local_with_auth  cleanup_registry.sh  funding.json  setup_dev.sh  setup_microk8s.sh  use_mircok8s.sh
.github/workflows/: deploy-fargate-service.yml  deploy.yml
charts/: README.md
charts/main/: .charts-main-gitlab-ci.yaml  Chart.yaml  README.md  example_secrets.yaml  values.yaml
charts/phoenix_hugging_face_classifier/: Chart.yaml  README.md  values.yaml
clusters/dev/: hf_values.yaml  values.yaml
console_ui/: .console_ui-gitlab-ci.yaml  .env  .env.dev  .env.example  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  environment.d.ts  eslint.config.mjs  next-i18next.config.js  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.eslint.json  tsconfig.json
docs/: administrating_phoenix.md  development_getting_started.md  gcp_setup.md  prefect_ingress_setup.md  prefect_setup.md
nginx/: Dockerfile  README.md  local_phoenix_superset.conf
python/: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-run-custom-mypy.sh  Dockerfile  Dockerfile.nvidia  Makefile  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml
python/projects/hugging_face_classifier/: .hugging_face_classifier-gitlab-ci.yaml  Makefile  README.md  compose.nvidia.yaml  compose.yaml  default_logging.yaml  model_white_listing.md  prefect.yaml  pyproject.toml  requirements.in  requirements.nvidia.in  requirements.nvidia.txt  requirements.shared.in  requirements.txt
python/projects/hugging_face_classifier/hugging_face_classifier/: __init__.py  health_check_flows.py  inference.py  inference_flows.py  logging_utils.py  utils.py
python/projects/hugging_face_classifier/hugging_face_classifier/tests/: conftest.py  helper_functions.py
python/projects/hugging_face_classifier/hugging_face_classifier/tests/integration/: test_gcp_integration.py
python/projects/hugging_face_classifier/hugging_face_classifier/tests/unit/: test_hf_classifier.py
scripts/: convert_pcre_csv_to_re2.py  resolve-infra-config.sh
(+663 files in other folders)
